# stm32_cubemx_adxl345

./: CMakeLists.txt  devcontainer-stm32-cubemx-adxl345.ioc
Core/Src/: gpio.c
app/adxl345/: CMakeLists.txt  adxl345.cpp  adxl345.hpp  adxl345_config.hpp  adxl345_registers.hpp
app/main/: CMakeLists.txt  main.cpp
cmake/stm32cubemx/: CMakeLists.txt
